# cmd/api/comments.go
@@ -11,6 +11,21 @@ type CreateCommentPayload struct {
 	Likes   int    `json:"likes" validate:"omitempty,min=0"`
 }
 
+// createCommentHandler godoc
+//
+//	@Summary		Create a comment
+//	@Description	Adds a comment to a post
+//	@Tags			comments
+//	@Accept			json
+//	@Produce		json
+//	@Param			postId	path		int						true	"Post ID"
+//	@Param			body	body		CreateCommentPayload	true	"Comment payload"
+//	@Success		201		{object}	store.Comment
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{postId}/comments [post]
 func (app *application) createCommentHandler(w http.ResponseWriter, r *http.Request) {
 	post, ok := getPostFromCtx(r)
 
